# Swiss-Ephemeris-API

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.cursor/rules/: 10-swiss-ephemeris-api.mdc
.cursor/skills/swiss-ephemeris-api/: SKILL.md
.github/workflows/: build-and-push.yml
app/: __init__.py  deps.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: aspects.py  chart.py  eclipses.py  houses.py  lunar_phase.py  nodes.py  planets.py  special_points.py  stars.py
app/core/: config.py  logging_config.py  swisseph_core.py
app/schemas/: aspects.py  chart.py  common.py  eclipses.py  houses.py  lunar_phase.py  nodes.py  planets.py  stars.py
app/services/: eclipses.py  fixed_stars.py  lunar_phase.py  nodes.py  swisseph_service.py  zodiac.py
app/utils/: datetime_utils.py  geo.py  houses.py
docs/: API.md
ephe/: README.md
ephe/ast2/: se02060.se1
tests/: conftest.py  test_datetime_utils.py  test_lunar_phase.py  test_swisseph_core.py  test_swisseph_service.py
tests/test_api/: test_all_endpoints.py  test_planets.py
